<resources>
    <string name="app_name">Bitcoinium Prime</string>
    <string name="version_name">1.10.1</string>
    <string name="default_exchange">bitstamp</string>
    <string name="default_miningpool">BitMinter</string>
    <string name="default_currency">BTC/USD</string>
    <string name="bitcoinDonationAddress">1yjDmiukhB2i1XyVw5t7hpAK4WXo32d54</string>
    <string name="litecoinDonationAddress">LhjBwNdERVB8DPTubYFwCsDfzRGJsTcqWp</string>
    <string name="dogecoinDonationAddress">D7GQR2WqQLPtrpwFHdc9uU3UbXwHXf9c5y</string>
    <string name="bitcoiniumGithub">https://github.com/veken0m/bitcoinium</string>
    <string name="xchangeGithub">https://github.com/timmolter/xchange</string>
    <string name="twitterAddress">http://twitter.com/veken0m</string>
    <string name="emailAddress">veken0m.apps@gmail.com</string>
    <string name="author">Michael Lagacé (veken0m)</string>
    <string name="price_widget_name">Bitcoinium Price</string>
    <string name="mining_widget_name">Bitcoinium Mining</string>
    <string name="exchange">Exchange</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="last">Last</string>
    <string name="vol">Vol</string>
    <string name="time">Time</string>
    <string name="miner">Miner</string>
    <string name="hashrate">Hashrate</string>
    <string name="payout">Payout</string>
    <string name="refreshButton">Update Widget(s)</string>
    <string name="orderbookButton">OrderBook</string>
    <string name="bitcoinChartsButton">Bitcoin Charts</string>
    <string name="bitcoinAverageButton">Bitcoin Average</string>
    <string name="minerstatsButton">Miner Stats</string>
    <string name="graphButton">Price Graph</string>
    <string name="exgraphButton">Web Charts</string>
    <string name="connectionError">Could not retrieve %1$s from %2$s.\n\nIs %2$s down?</string>
    <string name="minerConnectionError">Could not retrieve data from %1$s.\n\nPlease make sure that your API Token is entered correctly and that internet is working properly.</string>
    <string name="priceAlarmUpgrade">Bitcoinium Price Alert upgraded. \nPlease reset your alerts! Sorry for the inconvenience</string>
    <string name="priceAlarmUpgrade2">Please reset your alerts!\nSorry for the inconvenience</string>
    <string name="minerDownTickerNotif">Bitcoin Miner down!</string>
    <string name="minerDownTitleNotif">Bitcoin miner down</string>
    <string name="minerDownContentNotif">Miner on %1$s is down</string>
    <string name="priceTickerNotif">%1$s alert value has been reached! \n %1$s valued at %2$s on %3$s</string>
    <string name="priceTitleNotif">%1$s @ %2$s</string>
    <string name="priceContentNotif">%1$s value: %2$s on %3$s</string>
    <string name="permPriceTitleNotif">%1$s%2$s @ %3$s</string>
    <string name="pref_currency_summary">Select the currency pair displayed on the widget</string>
    <string name="pref_exchange_summary">Select the exchange used for the widget</string>
    <string name="pref_price_widget_title">Exchange and Currency</string>
    <string name="pref_price_alarm_summary">Notifies when price crosses threshold \n*Note*: Respective widget needs to be active</string>
    <string name="pref_price_alarm_title">Price Alert Notifications</string>
    <string name="pref_enable_alarm_summary">Enable notifications when price alert is tripped (widget needs to be active)</string>
    <string name="pref_enable_alarm_title">Enable Price Alert</string>
    <string name="pref_alarm_vibrate_summary">Vibrate when price alert is tripped</string>
    <string name="pref_alarm_sound_summary">Play a sound when price alert is tripped</string>
    <string name="pref_alarm_sound_pick_summary">Pick the sound to be played</string>
    <string name="pref_alarm_hardcore_summary">Uses android built-in Alarm Clock. *Caution*: Will override silent/vibration modes and keep ringing until shut off</string>
    <string name="pref_orderbook_limit_title">OrderBook list length limit</string>
    <string name="pref_orderbook_limit_summary">Limit values printed on screen to improve performance</string>
    <string name="pref_liquidity_highlight_summary">Color of text depends on depth</string>
    <string name="pref_highlight_green">Text will be colored GREEN if depth over this value</string>
    <string name="pref_highlight_yellow">Text will be colored YELLOW if depth is in between</string>
    <string name="pref_highlight_red">Text will be colored RED if depth under this value</string>
    <string name="pref_orderbook_currency_symbol_summary">Display currency symbols in the orderbook. \nDisable if text does not fit.</string>
    <string name="pref_notification_ticker_summary">Enable tickers in the notification drawer \n*Note*: Respective widget needs to be active</string>
    <string name="pref_notification_ticker_enable_summary">Enables use of notification drawer tickers</string>
    <string name="pref_miner_info_summary">Required to access your miner\'s information</string>
    <string name="pref_hashrate_notification_summary">Enable notifications when total hashrate is below 0.01 Mh/s</string>
    <string name="pref_update_time_color_fail_summary">Color of the update time if failed</string>
    <string name="pref_update_time_color_success_summary">Color of the update time if successful</string>
    <string name="pref_background_wiget_color_summary">Color for widget background</string>
    <string name="pref_widget_second_color_summary">Color for High, Low and Volume text</string>
    <string name="pref_widget_main_color_summary">Color for Exchange name and Last Price text</string>
    <string name="pref_milli_btc_summary">Changes all BTC widget prices to mBTC. \nEx: $1010.00 will show as $1.010 \nDoes not affect other crypto-currencies</string>
    <string name="pref_tap_refresh_summary">Tapping the widget will update instead of opening app</string>
    <string name="pref_refresh_interval_summary">Time interval between widget updates \n *WARNING* \nUpdating the widget more often will increase battery drain</string>
    <string name="pref_miner_widget_alarm_summary">Use Price Alert settings to enable sound and vibration during notification</string>
    <string name="pref_default_exchange_summary">Automatically selected when Bitcoinium opens</string>
    <string name="pref_default_currency_summary">Default currency for OrderBook and Price Graph</string>
    <string name="pref_google_analytics_summary">Provide anonymous data in order to help the developers improve Bitcoinium</string>
    <string name="pref_graph_scale_summary">When the price graph is scrolled, max and min values will be readjusted to maximize viewing</string>
    <string name="pref_battery_saving_mode_summary">Disable updates when device is sleeping</string>
    <string name="pref_widget_config_summary">Various display and power saving settings</string>
    <string name="pref_bid_ask_replace_summary">Replace High/Low with Bid/Ask if supported by exchange</string>
    <string name="pref_rate_bitcoinium_summary">Ratings, reviews and feedback are greatly appreciated!</string>
    <string name="pref_widget_theme_summary">Put the theme into effect</string>
    <string name="pref_select_mining_pool_summary">Select the mining pool used for the widget</string>
    <string name="pref_payout_unit_summary">Select the units used to display payout</string>
    <string name="hardcoreMode">*Hardcore Mode*</string>
    <string name="msgEnterUnscaledValues">Please enter UNSCALED values\nFor example, enter BTC not mBTC</string>
    <string name="alarmSettings">Alert Settings</string>
    <string name="displayCurrencySymbols">Display Currency Symbols</string>
    <string name="enableLiquidityHighlighting">Enable Liquidity Highlighting</string>
    <string name="notificationAreaTickers">Notification Area Tickers</string>
    <string name="notificationDrawerTickers">Notification Drawer Tickers</string>
    <string name="enableTickers">Enable Tickers</string>
    <string name="miningWidget">Mining Widget</string>
    <string name="miningPool">Mining Pool</string>
    <string name="payoutUnits">Payout units</string>
    <string name="minerApiTokens">Miner API Tokens</string>
    <string name="bitcoinMinerAlert">Bitcoin Miner Alert</string>
    <string name="minerWidgetSettings">Miner Widget Settings</string>
    <string name="general">General</string>
    <string name="defaultExchange">Favorite Exchange</string>
    <string name="defaultExchangeCurrency">Default Exchange Currency</string>
    <string name="optGoogleAnalytics">Opt-in Google Analytics</string>
    <string name="xchangeSummary">A Financial Exchange Library for Java, with support for Bitcoin</string>
    <string name="xchangeGithubText">XChange Github</string>
    <string name="bitcoiniumGithubText">Bitcoinium Github</string>
    <string name="submit_feature_request">Please submit issues and feature requests here</string>
    <string name="rateBitcoinium">Rate Bitcoinium on Play Store!</string>
    <string name="aboutSummary">Contact info, feedback and repositories</string>
    <string name="donations">Donations</string>
    <string name="bitcoinDonationAddressText">Bitcoin</string>
    <string name="litecoinDonationAddressText">Litecoin</string>
    <string name="dogecoinDonationAddressText">Dogecoin</string>
    <string name="createWidget">Create Widget</string>
    <string name="priceGraphSettings">Price Graph Settings</string>
    <string name="viewWindowScaling">View Window Scaling</string>
    <string name="widgetConfiguration">Widget Configuration (applies to all)</string>
    <string name="widgetConfigurationText">Widget Configuration</string>
    <string name="bidAskOnWidget">Bid/Ask on Widget</string>
    <string name="displayMilliBtc">Display Bitcoin prices in mBTC</string>
    <string name="disableUpdatesMobile">Disable updates on mobile connection</string>
    <string name="refreshOnlyWifi">Refresh only on WiFi</string>
    <string name="tapToUpdate">Tap to Update</string>
    <string name="powerSaving">Power Saving</string>
    <string name="widgetUpdateInterval">Widget Update Interval</string>
    <string name="batterySavingMode">Battery Saving Mode</string>
    <string name="customizeWidget">Customize Widget</string>
    <string name="enableCustomization">Enable Customization</string>
    <string name="mainWidgetColor">Main Text Color</string>
    <string name="secondaryWidgetColor">Secondary Text Color</string>
    <string name="backgroundWidgetColor">Background Color</string>
    <string name="updateTimeColorSuccess">Update Time Color (Success)</string>
    <string name="updateTimeColorFail">Update Time Color (Failed)</string>
    <string name="currency_pair">Pair</string>
    <string name="bids">Bids</string>
    <string name="asks">Asks</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="orderbook">Orderbook</string>
    <string name="trades">Trades</string>
    <string name="OK">OK</string>
    <string name="widgetCurrency">Widget Currency</string>
    <string name="authorText">Author</string>
    <string name="aboutBitcoinium">About Bitcoinium</string>
    <string name="about">About</string>
    <string name="emailText">Email</string>
    <string name="twitterText">Twitter</string>
    <string name="versionText">Version</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="selectSound">Select Sound</string>
    <string name="highDepth">High Depth</string>
    <string name="symbol">Symbol</string>
    <string name="priceAlarm">Price Alarms</string>
    <string name="symbol_short">Sym.</string>
    <string name="currencyPairFilter">Currency Pair Filter</string>
    <string name="pref_pickcurrency">Pick a Currency Pair</string>
    <string name="pref_pickexchange">Pick an Exchange</string>
</resources>