<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/notificationDrawerTickers">

    <PreferenceCategory android:title="@string/notificationDrawerTickers">

        <PreferenceScreen
            android:summary="@string/pref_notification_ticker_summary"
            android:title="@string/notificationDrawerTickers">

            <PreferenceCategory android:title="@string/general">

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enableTickerPref"
                    android:summary="@string/pref_notification_ticker_enable_summary"
                    android:title="@string/enableTickers"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/notificationDrawerTickers"
                android:key="notificationSettingsPref"/>

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>