<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Miner Settings">
        <PreferenceScreen
            android:summary="@string/pref_miner_info_summary"
            android:title="@string/minerApiTokens">
            <PreferenceCategory android:title="@string/minerApiTokens">
                <EditTextPreference
                    android:defaultValue=""
                    android:key="deepbitKey"
                    android:summary="Enter your Deepbit API token to use MinerStats"
                    android:title="Deepbit API token"/>
                <EditTextPreference
                    android:defaultValue=""
                    android:key="bitminterKey"
                    android:summary="Enter your BitMinter API token to use MinerStats \n *NOTE* - Remember to enable API perk!"
                    android:title="BitMinter API token"/>
                <EditTextPreference
                    android:defaultValue=""
                    android:key="emcKey"
                    android:summary="Enter your EclipseMC API token to use MinerStats"
                    android:title="EclipseMC API token"/>
                <EditTextPreference
                    android:defaultValue=""
                    android:key="slushKey"
                    android:summary="Enter your Slush API token to use MinerStats"
                    android:title="Slush API token"/>
                <EditTextPreference
                    android:defaultValue=""
                    android:key="50BTCKey"
                    android:summary="Enter your 50BTC API token to use MinerStats"
                    android:title="50BTC API token"/>
                <EditTextPreference
                    android:defaultValue=""
                    android:key="btcguildKey"
                    android:summary="Enter your BTCGuild API token to use MinerStats"
                    android:title="BTCGuild API token"/>
                <EditTextPreference
                    android:defaultValue=""
                    android:key="eligiusKey"
                    android:summary="Enter your Eligius BTC token to use MinerStats \n *NOTE* - The token is case sensitive!"
                    android:title="Eligius API token (BTC Address)"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceScreen
        android:summary="@string/pref_hashrate_notification_summary"
        android:title="@string/bitcoinMinerAlert">
        <PreferenceCategory android:title="@string/minerWidgetSettings">
            <Preference android:summary="@string/pref_miner_widget_alarm_summary"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="bitminterAlertPref"
                android:title="BitMinter miner down alert"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="deepbitAlertPref"
                android:title="DeepBit miner down alert"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="slushAlertPref"
                android:title="Slush miner down alert"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="50btcAlertPref"
                android:title="50BTC miner down alert"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="eclipsemcAlertPref"
                android:title="EclipseMC miner down alert"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="btcguildAlertPref"
                android:title="BTC Guild alert miner down alert"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="eligiusAlertPref"
                android:title="Eligius alert miner down alert"/>
        </PreferenceCategory>
    </PreferenceScreen>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/payoutUnits"
        android:entryValues="@array/payoutUnitsValues"
        android:key="widgetMiningPayoutUnitPref"
        android:summary="@string/pref_payout_unit_summary"
        android:title="@string/payoutUnits"/>

</PreferenceScreen>