<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/bitcoincharts_layout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/currencyFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/actionbar_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency_header"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currencyPairFilter"/>

        <Spinner
            android:id="@+id/bitcoincharts_currency_spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TableRow>

        <TextView
            android:id="@+id/bitcoincharts_symbol"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#101010"
            android:text="@string/symbol"
            android:textColor="#33B5E5"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#101010"
            android:gravity="center_horizontal"
            android:text="@string/last"
            android:textColor="#33B5E5"
            android:textSize="18sp"/>
        <!--
        <TextView
            android:layout_weight="1"
            android:background="#101010"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_height="fill_parent"
            android:text="Avg"
            android:textColor="#33B5E5" />-->

        <TextView
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#101010"
            android:gravity="center_horizontal"
            android:text="@string/vol"
            android:textColor="#33B5E5"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#101010"
            android:gravity="center_horizontal"
            android:text="@string/low"
            android:textColor="#33B5E5"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#101010"
            android:gravity="center_horizontal"
            android:text="@string/high"
            android:textColor="#33B5E5"
            android:textSize="18sp"/>

        <!--
        <TextView
            android:layout_weight="1"
            android:background="#101010"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_height="fill_parent"
            android:text="Bid"
            android:textColor="#33B5E5" />

        <TextView
            android:layout_weight="1"
            android:background="#101010"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_height="fill_parent"
            android:text="Ask"
            android:textColor="#33B5E5" />
        -->
    </TableRow>

    <ScrollView
        android:id="@+id/bitcoincharts_tablescroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#101010"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/bitcoincharts_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:showDividers="beginning"
            android:stretchColumns="5">
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loadSpinner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#101010"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pbHeaderProgress3"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ProgressBar>
    </LinearLayout>

    <!--     <WebView
            android:id="@+id/karma_ad"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_gravity="bottom|center_horizontal" /> -->

</TableLayout>